Fix file permissions in tarball.
Ant's tar task doesn't preserve file permission when it rolls a tarball.
Ant's tar task is stupid.
Whoever wrote ant's tar task should have their file permissions revoked.

--- a/build.xml
+++ b/build.xml
@@ -81,8 +81,10 @@
   
   <target name="tar" depends="app">
     <tar destfile="jmxsh-1.0-1.tar.gz" compression="gzip">
-         <tarfileset dir=".">
+         <tarfileset dir="." filemode="555">
            <include name="jmxsh"/>
+         </tarfileset>
+         <tarfileset dir=".">
            <include name="jmxsh.jar"/>
            <include name="jmxsh.spec"/>
          </tarfileset>
